--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "vue": "^3.3.11"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.7",
     "@vitejs/plugin-vue": "^4.5.2",
     "autoprefixer": "^10.4.17",
     "gh-pages": "^6.1.1",
